# basitop

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
packaging/homebrew/: README.md  basitop.rb
src/: app.rs  main.rs  metrics.rs  powermetrics.rs  theme.rs
src/ui/: cpu_panel.rs  footer.rs  gpu_panel.rs  header.rs  io_panel.rs  memory_panel.rs  mod.rs  power_panel.rs  temp_panel.rs  thermal_panel.rs
src/widgets/: braille.rs  braille_chart.rs  gradient.rs  gradient_gauge.rs  mod.rs
