[package]
name = "basitop"
version = "0.1.0"
edition = "2021"
description = "btop-style Apple Silicon performance monitor for macOS — CPU, GPU, power, thermal, memory in your terminal. Built in Rust, no sudo required."
license = "MIT"
repository = "https://github.com/tejasgajare/basitop"
homepage = "https://github.com/tejasgajare/basitop"
keywords = ["apple-silicon", "macos", "tui", "monitor", "performance"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
macmon = "0.7"
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.35"
libc = "0.2"
plist = "1"

[profile.release]
opt-level = 3
lto = true
